Completed Topic 3 Study Group Lab

--- a/phase-1/03-control-flows-functions.ipynb
+++ b/phase-1/03-control-flows-functions.ipynb
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,29 +1132,6 @@
    "source": [
     "## Making Lists from Lists\n",
     "List comprehension (and dictionary comprehension!)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 4, 5, 6, 7, 8]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new = []\n",
-    "for x in l:\n",
-    "    new.append(x+2)\n",
-    "new"
    ]
   },
   {
@@ -1174,12 +1151,35 @@
     }
    ],
    "source": [
-    "[x+2 for x in l]"
+    "new = []\n",
+    "for x in l:\n",
+    "    new.append(x+2)\n",
+    "new"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x+2 for x in l]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -1190,7 +1190,7 @@
        "{1: 2, 2: 3, 3: 4, 4: 5, 5: 6, 6: 7}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
        "[4, 6, 8]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,9 +1392,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "2\n",
+      "{'home_team': True, 'away_team': False, 'country': 'France', 'num_passes': 484, 'passes_completed': 423, 'fouls_committed': 16, 'colors': ['blue', 'white', 'red'], 'players': [{'name': 'Hugo LLORIS', 'captain': True, 'shirt_number': 1, 'position': 'Goalie'}, {'name': 'Benjamin PAVARD', 'captain': False, 'shirt_number': 2, 'position': 'Defender'}, {'name': 'Raphael VARANE', 'captain': False, 'shirt_number': 4, 'position': 'Defender'}, {'name': 'Samuel UMTITI', 'captain': False, 'shirt_number': 5, 'position': 'Defender'}, {'name': 'Paul POGBA', 'captain': False, 'shirt_number': 6, 'position': 'Midfield'}, {'name': 'Antoine GRIEZMANN', 'captain': False, 'shirt_number': 7, 'position': 'Forward'}, {'name': 'Kylian MBAPPE', 'captain': False, 'shirt_number': 10, 'position': 'Forward'}, {'name': 'Ousmane DEMBELE', 'captain': False, 'shirt_number': 11, 'position': 'Forward'}, {'name': 'Corentin TOLISSO', 'captain': False, 'shirt_number': 12, 'position': 'Midfield'}, {'name': 'Ngolo KANTE', 'captain': False, 'shirt_number': 13, 'position': 'Midfield'}, {'name': 'Lucas HERNANDEZ', 'captain': False, 'shirt_number': 21, 'position': 'Defender'}]}\n"
+     ]
+    }
+   ],
    "source": [
     "# explore the data - its schema\n",
     "print(type(soccer_match))\n",
@@ -1402,27 +1412,6 @@
     "\n",
     "print(soccer_match[0])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1433,10 +1422,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def even_numbered_shirts(match):\n",
+    "    even_shirts = []\n",
+    "    for team in match:\n",
+    "        shirts = list(filter(lambda player: player[\"shirt_number\"] % 2 == 0 ,team[\"players\"]))\n",
+    "        even_shirts.extend(shirts)\n",
+    "    return len(even_shirts)\n",
+    "even_numbered_shirts(soccer_match)     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def even_numbered_shirts2(match):\n",
+    "    even_shirts = []\n",
+    "    for team in match:\n",
+    "        even_shirts.extend([player[\"shirt_number\"] for player in team[\"players\"] if player['shirt_number']%2==0])\n",
+    "    return len(even_shirts)\n",
+    "even_numbered_shirts2(soccer_match)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1449,17 +1484,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Hugo LLORIS',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 1,\n",
+       "  'position': 'Goalie'},\n",
+       " {'name': 'Benjamin PAVARD',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 2,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Raphael VARANE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 4,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Samuel UMTITI',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 5,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Paul POGBA',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 6,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Antoine GRIEZMANN',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Kylian MBAPPE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 10,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Ousmane DEMBELE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 11,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Corentin TOLISSO',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 12,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Ngolo KANTE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 13,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Lucas HERNANDEZ',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 21,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Mathew RYAN',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 1,\n",
+       "  'position': 'Goalie'},\n",
+       " {'name': 'Mark MILLIGAN',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 5,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Mathew LECKIE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'}]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def shirt_totals_100_while(match):\n",
+    "    #keeps track of sum of shirts\n",
+    "    shirt_total = 0\n",
+    "    #keeps list of players who's shirts are counted\n",
+    "    shirts = []\n",
+    "    \n",
+    "    team1index = 0\n",
+    "    team2index = 0\n",
+    "    first_team_size = len(match[0][\"players\"])\n",
+    "    second_team_size = len(match[1][\"players\"])\n",
+    "#     print(first_team_size)\n",
+    "#     print(second_team_size)\n",
+    "    \n",
+    "    while shirt_total < 100 or team1index < first_team_size or team2index < first_team_size:\n",
+    "        if shirt_total >= 100:\n",
+    "            print(shirt_total)\n",
+    "            return shirts\n",
+    "        elif team1index < first_team_size:\n",
+    "            shirts.append(match[0][\"players\"][team1index])\n",
+    "            shirt_total += match[0][\"players\"][team1index][\"shirt_number\"]\n",
+    "            team1index += 1\n",
+    "        elif team2index < second_team_size:\n",
+    "            shirts.append(match[1][\"players\"][team2index])\n",
+    "            shirt_total += match[1][\"players\"][team2index][\"shirt_number\"]\n",
+    "            team2index += 1\n",
+    "        else:\n",
+    "            return \"Sum of shirt numbers will not reach 100\"\n",
+    "    if shirt_total >= 100:\n",
+    "        print(shirt_total)\n",
+    "        return shirts\n",
+    "    \n",
+    "    \n",
+    "shirt_totals_100_while(soccer_match)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Hugo LLORIS',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 1,\n",
+       "  'position': 'Goalie'},\n",
+       " {'name': 'Benjamin PAVARD',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 2,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Raphael VARANE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 4,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Samuel UMTITI',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 5,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Paul POGBA',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 6,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Antoine GRIEZMANN',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Kylian MBAPPE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 10,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Ousmane DEMBELE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 11,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Corentin TOLISSO',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 12,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Ngolo KANTE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 13,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Lucas HERNANDEZ',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 21,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Mathew RYAN',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 1,\n",
+       "  'position': 'Goalie'},\n",
+       " {'name': 'Mark MILLIGAN',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 5,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Mathew LECKIE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'}]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def shirt_totals_100_for(match):\n",
+    "    shirt_total = 0\n",
+    "    shirts = []\n",
+    "    for team in match:\n",
+    "        for player in team[\"players\"]:\n",
+    "            if shirt_total > 100:\n",
+    "                break\n",
+    "            else:\n",
+    "                shirt_total += player[\"shirt_number\"]\n",
+    "                shirts.append(player)\n",
+    "    #print(shirt_total)\n",
+    "    return shirts\n",
+    "shirt_totals_100_for(soccer_match)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1492,7 +1715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
