Completed Topic 3 Exercise

--- a/phase-1/03-control-flows-functions.ipynb
+++ b/phase-1/03-control-flows-functions.ipynb
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -1433,7 +1433,7 @@
        "8"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,7 @@
        "8"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1555,7 @@
        "  'position': 'Forward'}]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1588,9 +1588,9 @@
     "            team2index += 1\n",
     "        else:\n",
     "            return \"Sum of shirt numbers will not reach 100\"\n",
-    "    if shirt_total >= 100:\n",
-    "        print(shirt_total)\n",
-    "        return shirts\n",
+    "#     if shirt_total >= 100:\n",
+    "#         print(shirt_total)\n",
+    "#         return shirts\n",
     "    \n",
     "    \n",
     "shirt_totals_100_while(soccer_match)\n"
